--- a/views/home.html
+++ b/views/home.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="/css/styles.css"> 
   </head>
   <body>
-    <header>
+
+    <!-- HEADER -->
+    <header class="header">
       <h1>Nuestro Restó</h1>
       <h2>Carta</h2>
     </header>
+
     <!-- HOME -->
     <main class="home">
 
@@ -20,7 +23,7 @@
           <!-- ASIDE NAV -->
       <nav class="home__aside-nav">
         <ul type="none">
-          <li><a href="#entradas">Entrada</a></li>
+          <li><a href="#entradas">Entradas</a></li>
           <li><a href="">Platos Principales</a></li>
           <li><a href="">Ensaladas</a></li>
           <li><a href="">Raws</a></li>
@@ -37,10 +40,7 @@
 
           <!-- ENTRADAS -->
       <section class="home__entradas">
-        <h3>Entradas</h3>
-
-        <!-- ENTRADAS IMAGE -->
-        
+        <h3>Entradas</h3>      
 
         <!-- ENTRADAS PLATOS -->
         <div class="home__entradas-platos">
